# ChangeLog for app-crypt/tc-play
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/tc-play/ChangeLog,v 1.2 2014/03/01 22:35:11 mgorny Exp $

  01 Mar 2014; Michał Górny <mgorny@gentoo.org> tc-play-1.1.ebuild:
  Update libgcrypt dep to use slot :0.

*tc-play-1.1 (05 Oct 2013)

  05 Oct 2013; Alon Bar-Lev <alonbl@gentoo.org> +metadata.xml,
  +tc-play-1.1.ebuild:
  Initial import, bug#432914