@@ -2,25 +2,15 @@
 Hash: SHA256
 
 DIST tc-play-1.1.tar.gz 1011669 SHA256 62346e852c6f781fffebf5c43e5967ceb0e36304626aa27e77c77378f8215d84 SHA512 9401e094d207cdc81fca6451c82de6bf8e1d8a4fc9bc330183cace2000bb82e81f04ca33a6bfdbe4b8ac3f09489e408b37255f2ed7701c21f62a59f4ee92b6c9 WHIRLPOOL 06c5eb3551e1dcc100d55043bec4952d06783799e7ed916487032a7e32a74f3eea317dadc3cc60e1ae9eb0654779058503f288ee791776a997669a91d0da7653
+DIST tc-play-2.0.tar.gz 1015525 SHA256 0e17890f37e862746364b10bad62bbd9f3e2b2811a24b07df12eff266534e42d SHA512 17408b2a664eb6822c77ede4f38ca67cdf643512014619d830a2c024bb8971811eded4edd65f6398d6112a3b57cd11a5b414357878c817c9cc2aac9d851946d7 WHIRLPOOL 0fc8273debd60f421eecced41ba43bd5fc36c6fd09f48f365755bfe844bf3a425be79ca36ffe3011a01d70b9911da0cfcb0e21571b3af97ec9f8d84af3440806
 EBUILD tc-play-1.1.ebuild 1105 SHA256 d5fe8b5705af2b03a7936d42e9bec4eef86e3e4f9467181d7dce92696d4f962f SHA512 fd669ab48a5d3e7b682f5e9fd76d7c005cc74e1b6b1e0f54247acc5442a858b5c9e559c9c2a2aa41355848c4ca38d439621556aad78f534be115194fa16c847e WHIRLPOOL 6479bb5ff3684a1e5847ad0244040c23d3a51d57e42f0a38179c4473fcf327470ab425f754b83c79dc97ef41be8a703d2b752676bc27f450d432987e669a757c
-MISC ChangeLog 460 SHA256 71d8df07d099180ba56c7592c897c674f079ed6127afe1aefd5ee0ac6d717e4a SHA512 353c4759da1c6e57b2761ac9431447e6b8378f58170c6775f2798bf4abad9202f1d2bacdbfd39fa9147909f893b118a389795ab719f9abaeaa63744b2d29fe0f WHIRLPOOL bd53629ef3b430d14b80256df98197da34c8065d3396e9df25ca166c0aeb4690f8148fe9ffde3256208443c0c804bff89de29295d35736d8bfcda6ef92f3c3c7
+EBUILD tc-play-2.0.ebuild 1105 SHA256 c98e9e24c4a64b9443d92bdcaea34e54cf1eda55df9b51042ad666f217f9c42c SHA512 15e84a456a9b02cdb467ecf18983cb664e0ecd7638883c0a57caa3f6ff677dc5a7673aa4f2aa9844531706b0564db870ecb2fd4e2afe924ee99b6c66f9328846 WHIRLPOOL a5880e808118a0d18b2f49c0f528bfab9fb41935db9aae80958316582895db45c7d1a72fb365ad6d708852afbf4c322ff25d7401101e19eb3c9de1ab40188893
+MISC ChangeLog 585 SHA256 822d1e9f2b6fc73e463a7a0be3c80be2f0a76d0d4d6edb7e9ae662f2d358f000 SHA512 f7e183ed402c1fcdec9eace2d2f51fe48270b223ad831501a35b713219dd943b3bbfd4c1748bccf4eebeadeb558bb108a6a91ca56d6e614280e18328519a9f52 WHIRLPOOL 5385576da9a0cfa202677513283ed29f2be61a8f013a5d9aeae85984ec3508e2295586f43430075fb5524f46eeb6d54ed53b810400c3ba6a7e86a9f211f6cf49
 MISC metadata.xml 250 SHA256 deee38f52b017ddf0a8c86da684ca968a3b77d5bbbfbbba3a45891816c8f2249 SHA512 e82f29b019d1786a9f936c2882cf2853ddcf4ba7df3a17130620fd93408b6d63df900cf848975815524977c90743650178b6563fb0b14da6762b788de26e61cc WHIRLPOOL c29ed944274949c1aa06023e1b653b5a3feac3eb9de842ba99aaeab6a5893b44c480782eba69ac6cfcf3396bb946bdb1f06eed3e33af7fe1523e37109e01027a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTEmCgXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOWzMP+wRfRuqFvc0kdql+WipVF7SQ
-JhCDu1NLMvJYuPkbuWy0Jz3szhr0fnOVuw9M9QBaMO7vyfEJJT0kcMm2s7rMXaOd
-6IDm4eoBaWu3UwUdRNF1GSBMlxdOafwKNslTKMGRStzEpBPbkbfaPGobwDkovXi8
-KiTTbEi5yTfxz5xobygxH7tjJyiL1mesuksQERSvv7CjWjNKGbgsVyQmWF0qQPzU
-yeLkSHXTXX9nMO4ewT1bV2CD1HqybyYFucDU0Jqx6kcqSJlEL0NceRf5QPjGf+Fe
-a5Gk6HKh0BotMgccGs7/4chV0uIl6ZFCym+ocTXNRANT6Yas1UOnRPKnay8DVBwb
-fgxXbpmZeAK6cL3Vdv+epnHTEetLUE+EDQxoZKhMOdmzgnCKQh1IHdkmTQJjsCm3
-GSpi8C1utCd1f+Ty3e50CBR2eAjRIx+67jVOMZepQUiNOBc2xlZr0sVBPNvOBq/t
-etpDgwGxUtyZX+PiES2hsIegR+/J2PqHrCFllJVGpvLNkXEx+v4apNSg4C/y5GHG
-LoRAQ29QSZbjhkvgWPzh3NXMpq+dQicL4OeaCWV7TIpIREvKULBFwzppvmQoXAkh
-QO0/5FAHAN5tD7ljTnn5za0sCADipQvtKjfYWt7w9vhmo4elCfGSvLFPPvJu89Ff
-/MkDfDLDswtiW/pXlFx9
-=oDJX
+iF4EAREIAAYFAlOTRtgACgkQXYk9GL8g3FE0AwD/ehVeqk0Eiy87p2or+olp5FEp
+ZBdS6YQixDmnVzyjvQcA+gIxs4zzNmqLdNkNyBIBpORK1MrnRZWgHVlmRR5CvPj/
+=hG4y
 -----END PGP SIGNATURE-----
