@@ -11,14 +11,14 @@ DIST laptop-mode-tools_1.63.tar.gz 107339 SHA256 04b9bf8cce4172a810ce4026e75e0e7
 DIST laptop-mode-tools_1.64.tar.gz 110165 SHA256 68b2016f51759285755a79a187a35466a4e46a7cfe4ef05bb1fcac7036c29605 SHA512 539388f5a86fc73a171aadafe8d3a04385cadedb41d3cb53822d4ad55b77262a82e717bfa910ec64c1ebba4d14cc02c9e1fab575c752ef8a77c2f67a023c8188 WHIRLPOOL 7201b1a69ea4265a1be9c659286a720cbfd66d840c43706a7f8099959b481fb1c018a2cb5f76c4bf7fdecbdcd3974da207e7af2b4439321b1961c87123a8900a
 EBUILD laptop-mode-tools-1.63-r2.ebuild 2788 SHA256 f2b49cf0080176987bbe5b265306f9994968adfc6c4b2ec24fcdbb0005ffc109 SHA512 aa0d3a793e08816673f6c4e26af47379a6c902467d24ba0c3c2e0aa0d4516ddc39bca465fa6ded954488bedfdeadc917b860147083484a00dfa1300b569bacc1 WHIRLPOOL d1e7321f2bf73723e8709afc333702307982aadb5ce7b7366fec42d89e2ecac1b00f93c56b42f93de18e3342fb8b3d2efa945319ce44ac6c39245acf1a0717bc
 EBUILD laptop-mode-tools-1.63-r3.ebuild 2870 SHA256 cc29d96a7aed7d7644ca5317e1ff1cff6781fdfbb542816d8523747b3c00bc95 SHA512 6e0813940319b3994b92888a5c05f3f311c41c2c0d3b1487d55aa5cace06da44d4cf7005ffd1dcd72bf538a0bd0a8d532dc8d7330b669d2e16272848aa1af34b WHIRLPOOL 73e2f61e719c2952c3b1178482781eb5d915b42f4ccafcc648f87ae0af3f9686064acac916556d166a6ef5e1d91e53aafc2b5fa8c34c64867662d053785dbd69
-EBUILD laptop-mode-tools-1.64-r1.ebuild 2757 SHA256 f03f56802e3137f3deafbed16b3c501abf03ed5d92a47e4088233f3a7e7c86f1 SHA512 d3f56823101780fb6b24022b08d544ea6186cedee94ffdacf9995b9d95ffbbbf861e132bfe0ff9fc83c3365592905be93b84477406089372971404c570c72684 WHIRLPOOL 5ea651820c1ad7148964874f0802e107bb894f940a84320e2d58080890b155beaec855fa06223c0340f6f73b101f2d1dcc2f95e9a946a45edcbe6167747d6542
+EBUILD laptop-mode-tools-1.64-r1.ebuild 2776 SHA256 d070abba3a1843f95b7de959471ee45bd77e21a2566c409557b72df533b20369 SHA512 0ba48bca493d411646c5381b70847b1bbd72c17dba720e859b481ae1e499dda563760cd0e12be23927d0e76d0028977c071fc0fa6dfdd7ce560dc72f849725bc WHIRLPOOL 0f3cd6c218a74d03fe58e782cc4164a293c25ac7dcd88db66d4634c3d58fd19db9f68174602e9355e6c208d4bd1525b6988d33b0201c896375cb4d9f670aa12e
 EBUILD laptop-mode-tools-1.64.ebuild 2703 SHA256 3de5cc097c5c653bc2cb726ed078cdbad2045c210499bc6bb12fb84a43b8d0c1 SHA512 a76aa4f86249d68bc93ceed4c816c07364f42a6c9314069824c445154bd0e5286e73e3c0eeb6455592b4d3d301ccf038e7277c3925d793c122a20f1fd725b655 WHIRLPOOL bffe18815d0ecbdc551f3c20da4e3e9ac26c9c1f4db88e00999aa5367b36fee32f6f280589c89ef099d3c57bde9593cfb5258e33da1c808d1985f057c849d5fb
-MISC ChangeLog 17776 SHA256 1a935e25d91359c05f8702a6ad3707b0076ae41b577949580d88156de20cb675 SHA512 20755fd6166c020e1db2fb92d275f540b6daea421db8f7fee524fad79b2c3e0595d8fc773161819fe4e0a532bbb0ff758d9a812676480b185adcca7f4998484c WHIRLPOOL 2d4b8acfc8730902569ca020e3863750b9f6ac1d88841100b4fb157b00ef4ad5bb419d7e51687bb897fc72648349797b2ea0b649c54130f42d5610b8a4e80173
+MISC ChangeLog 17900 SHA256 2803f7f39894d4b1ad5d39b5b614528480e84afac28f7b138e011b9296ff23a8 SHA512 61c3dd42d08f3ea05c5d04b6b91d78fd7aed9251031b29faa93cf28d050ac14d80f80f1189701c07fc1dc1110b26b5ebf9a03735cfa03aaa9c14e4de1593b758 WHIRLPOOL e88feddefd97b7a95c5df9a2c486ed8ef4ed7c871decc9d4cbe8447b3179605a7570ae4cc3a6b2a832b12a1ee8a63ebe520d8d2e926d45a0ac3569245f37de3d
 MISC metadata.xml 420 SHA256 2008caffae78c8d0c6a04f0b4b4768d2a9d2b9f62d96409141cd2e579f622749 SHA512 5bd05a4b5ce71343b10a46b57cd73b071c399062bb9813bcb9d9e329e1a4804a6b1f5489e6004626a9daa84e9b0ca399b0209d844dd0adb0c185a18adc535946 WHIRLPOOL ea091eb7cc936602de9e1179231f9fd8bb78ab447abd72b505be870b79acf50056a4610a56c4ab7c1585957ee44d2f85d47248eeee47f10cf860b8ac6b8535b4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlOE3h0ACgkQXYk9GL8g3FEMVwD+JWj5H5DsLZ50aYCEdhhVeP3h
-Q+q9xUPTKErXfd9N2uwA/Rp6ErnazUuOHN19TU2z7oAztG/agqHuLtgwiVfw0IF+
-=a/w/
+iF4EAREIAAYFAlOTSDAACgkQXYk9GL8g3FHbFAD7Bmp/147j2XKfM+RaKu6JTCsU
+uXueS1IPmJd1BwUluO0A/343QoUmLsEmu8uG6pYjGuK6f730xD0Z/k0/OQEZngfm
+=1BTz
 -----END PGP SIGNATURE-----
