@@ -12,16 +12,22 @@ AUX gnome-menus-3.8.0-gnome-calculator.patch 1765 SHA256 fa6134f15df7add10fc25fc
 AUX gnome-menus-3.8.0-ignore_kde_standalone.patch 1665 SHA256 5b27f8f02786db7383287bb233cc990934524e152778802e4c815307424e5d48 SHA512 db461006883594de834fff029b3aa769afa6955bc94062865d8c71ec224fdd64867693763c3ecb98921c98c7410bacf18dc2110b5322e1956c877e7fcf61bef0 WHIRLPOOL 5661aa027bcad2e380ca46f94143b043f43adc3ebe6ddcd9d21d951b3ab2a7d28167aa9faca183dd39d707428514b09fbe736dc0fa8bf72972230da5ab83f84e
 DIST gnome-menus-2.30.5.tar.bz2 471327 SHA256 6dcc565006d6e8c2025ae83ab1f82edf6bd04d61c804c0dc9bf5ea50629c4caa SHA512 e2722f8fc11d99b58de601171e10f87efd64e8752c26d3e2126ff909a4c263cd8be4842d3592b1029396fecf832aa094630fec2e47ea711a363cd03de2980a22 WHIRLPOOL e0d350971ecb541757ce2282e67010d29807eda61fb79be10e132fddd654529030991648d102cda43c15d0148cafc1627a814aff0b6292f947717e16f697a1bf
 DIST gnome-menus-3.0.1.tar.bz2 474839 SHA256 579c119c26f37781f66708e867ea45b3c37589b3b69e5b32d33e9bdb944165f0 SHA512 05eda56b741d7236b17276b3b208b8370ec8ff0db82e32a2c0adb84334c4d9365fe61dea08183858fb7c0093cf04a02ba1311483e3318dbe816a02c28f4198eb WHIRLPOOL f2583e79ea6aef0c5cffb94001ceba166b97e237861b51d39530155f36720bcfabbf50af0a16735f8112e44a7b8d7243ae9460285f590a0c2a351ad2203dc85e
+DIST gnome-menus-3.10.1-patches.tar.xz 5708 SHA256 fd97cd902aac72ca8aa783c65ae1664842bcf2227262848662e93e1c44e9f6ac SHA512 bfdca2ba70525b71059262d4d19a2567c3d74c7f255ff823e5c24e631b764ab05be954ec16630729220a22f2425f8d2a8ecb1b22641346f53d5af9d9f90feebc WHIRLPOOL 01942eb7cf017ffa42d1c4189320ec7be9a8e25127074151b0a929b22f8d66b43a257f7c96506cdcf28aee35ffdf009f4f20f30ac38faa0aee59b99149618a8e
 DIST gnome-menus-3.10.1.tar.xz 423052 SHA256 46950aba274c1ad58234374fa9b235258650737307f3bc396af48eb983668a71 SHA512 e6f0fe223e60f6c33a2ed2cd958035e5560d4063fbe7485263c4ad0eba82e18948d19f7dbe84dd0db5c339e94366759a0f98da533e2798c3ed9cc9a87f73c7e0 WHIRLPOOL f4d4266c7d3d06a4551b3a4aaa987c5e3d8ecf867afa5ea6c7c41de4675d4973e2a87dd80a604acfbcc29f14c0f1e70156faa93d13429f33218bf5e790eee1d0
 EBUILD gnome-menus-2.30.5-r1.ebuild 2668 SHA256 5e2b7b9552469aca78c3dce9112d6b6867a922f84074814f224e8384f36671a4 SHA512 f98647ec8aadd2d28f523b215019c8f830cc419414ccee8f405b910019e2558c8c9c06a429d15e1eb838262b1cc501e1c6665bf9cfb8c64f26e8ed8798e26f37 WHIRLPOOL 9cfc8809793240e53e76c59085399b3517dcb42f91a7a9797e15381912838516ab89a140d27fc042c5a34ce8ccc472dd21942ef6777d26e91746e206de66fa0e
 EBUILD gnome-menus-3.0.1-r2.ebuild 2200 SHA256 f08a93f384a07140e4a6ef53ddeb8d1775ce25e831597c4443a5e09664fd4ff7 SHA512 f9c88333af33430b2185a0b5927d9b0ba7678b5c7cc073e30c952d1433954b278838e8773ffe6be4b7b47408e5780c1575809fea509375ba0473396b98c64dde WHIRLPOOL 68120a9fc1af89333a790aba5a203a5122799c75a70e41f1e37de4fb35f4a53f16cc0e36a8d1c177ec0ce580ccfee6976f81be58a617d5390f9241e56d4d2ba6
+EBUILD gnome-menus-3.10.1-r1.ebuild 1666 SHA256 b7e3a69e462fb140c6e28fa2be4dd3188c545d2e0c2cc249fe536de37cec750f SHA512 0329cabfaa3ca88d187ed8051b370bb1f19389ed26b71bba1713fa65b9d4b6d04a30d6bb8441e18c72ddaec58eb153aba1682d6aaa7b4edf90eed64d668f0d78 WHIRLPOOL 9a4685a27bdd18cc8b21400a8ac7d01418932c7ee80d4e317f2cd02549d0b5e904fc87facccd2df33bfff2fbeee6cee27f48e5366d544707710d73634549e4e2
 EBUILD gnome-menus-3.10.1.ebuild 1445 SHA256 de5abe983a0714e12b1d09d7df5acbd9e06c74aa459b8493d3ab37752279cc40 SHA512 244ea331a6015e669d6b2c2405986406bff78f7548d12192693f2fea2bbf8f674a574da070da6a692005db619cddfcf3d0111122a873b351336f0a700c8b287e WHIRLPOOL ac8cbbb61d8a8e0668475a32262b219d4cde696ac62a83ccb729fa71f154569b070ff3adfd4879d33e91cf0026f54e9ca0cbb088c8132aae01aef71374b7a071
-MISC ChangeLog 29936 SHA256 772ba0a8544f043ef652247eaac88f480395abc3391d3412f22b715477b31035 SHA512 3c8de92cab3986d7c85d16d90bf584b8d79821746458f0f11f1914736dfc6770f5a91ab0a0206c4276a404a39df465c27a5af584600de2b3f801177926ef9fcc WHIRLPOOL f241834992a78a7c4d402061d822a0bacb9a59c160a3e64b488775f40b62736620064fa93e80ab5b68b2bafe0e07cf3b7f6606914cf7171d5e29a743d5b96df7
+MISC ChangeLog 30174 SHA256 f0bfc0ed0f5b95734f96068f8130ff26547393777e5ff81f9543479e6f50794f SHA512 9c346cc5466a2288b1c69af72fc1386b91a0f1209b2120c23d505291396a51d3e09be44ce971d4bda8dfa89312c88d9e72685d1d919a441cd5f2087a98a49ea9 WHIRLPOOL 62baecf2dd21954d8272b078671842e054e1df5a7b0b0349760b54f104c90d85c4467b47bdec318e0c29edd6b15f18398ca22e21129a3a1a049ace28d2df65b8
 MISC metadata.xml 159 SHA256 b1ccd57b80d8d6ee7a9924844efd69830edfb744ab818d67e50a008b5aae7d4b SHA512 9408846d0f3194f62043b64e325aed9e8cce9a74b556865acf71facc3ad59a092dccbbb3c608ada40b73625eaac93a7bcc976858c6a47426bb8fadb6f830fe2b WHIRLPOOL 4700c8b71899b5acffcc46580315d4d116b478cfa283e0ea0569ab180e46850ce85d73c7370d989e53dd8aecb69ed843d2716bfebd3c5d74a7b5c3d4b94b96bb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlNb+HIACgkQCaWpQKGI+9Q62ACbBZNX4egpHDKSIO7QxCaNFGyl
-wjMAn252KWr4gru1afQgfxd5kM2ipEpo
-=0Ra5
+iQEcBAEBCAAGBQJTk0VNAAoJEJ0WA1zPCt1hJDMH/3pJi5hJGvqe6yldApscDg3c
+7Yld92YzmI8wtSjq/PBhmze70I/rTxZBfVq4VCSUmJBUULuiPdOjdU2dW//5vwvS
+dKKDwv97GZav8eaecO7aGC1I2+ie4X6Z1UH5Qt7uUfMh3eaNSA9743DOfsZ1ro69
+v5RvmNxIdl6/gy49Q+RcKuQm66+pp+vExnbh1Xdm2pVxPXeIYrgXMBVIE+iwARub
+UoRaAf2YlBfsWOyruyjtEoU5dqDfT5+gLJ/gDEqJi0TUnl25Q8lb3tsluIgKypnO
+p7HjWRD9zCLv4TsLH9vMUXmgDJRyaIE2upfN4SuWAc/jYryPAaxWZdxFgUv6hZo=
+=wzJe
 -----END PGP SIGNATURE-----
