@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install setup
+DEPEND=dev-libs/libgpg-error sys-fs/lvm2 sys-apps/util-linux dev-libs/libgcrypt:0 openssl? ( dev-libs/openssl )
+DESCRIPTION=a free, pretty much fully featured and stable TrueCrypt implementation
+EAPI=5
+HOMEPAGE=https://github.com/bwalex/tc-play
+IUSE=openssl
+KEYWORDS=~amd64
+LICENSE=BSD
+RDEPEND=dev-libs/libgpg-error sys-fs/lvm2 sys-apps/util-linux dev-libs/libgcrypt:0 openssl? ( dev-libs/openssl )
+SLOT=0
+SRC_URI=https://github.com/bwalex/tc-play/archive/v2.0.tar.gz -> tc-play-2.0.tar.gz
+_eclasses_=multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=db95df568e63aa8ee2bf91203f0cd54f
