@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare unpack
+DEPEND=>=dev-libs/glib-2.29.15:2 introspection? ( >=dev-libs/gobject-introspection-0.9.5 ) >=dev-util/intltool-0.40 sys-devel/gettext virtual/pkgconfig test? ( dev-libs/gjs ) app-arch/xz-utils >=sys-apps/sed-4
+DESCRIPTION=Library for the Desktop Menu fd.o specification
+EAPI=5
+HOMEPAGE=https://git.gnome.org/browse/gnome-menus
+IUSE=debug +introspection test
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris
+LICENSE=GPL-2+ LGPL-2+
+RDEPEND=>=dev-libs/glib-2.29.15:2 introspection? ( >=dev-libs/gobject-introspection-0.9.5 ) !<gnome-base/gnome-menus-3.0.1-r1:0
+SLOT=3
+SRC_URI=mirror://gnome/sources/gnome-menus/3.10/gnome-menus-3.10.1.tar.xz http://dev.gentoo.org/~tetromino/distfiles/gnome-menus/gnome-menus-3.10.1-patches.tar.xz
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	9637c29fc715b17a6328f24251129557	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	libtool	b9b3340e3a19510f0d9f05cfccbf209f	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=7481774aad2fcea15950cc69a2aa3bc7
