@@ -1,6 +1,13 @@
 # ChangeLog for gnome-base/gnome-menus
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-menus/ChangeLog,v 1.204 2014/04/26 18:18:25 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-menus/ChangeLog,v 1.205 2014/06/07 17:01:47 tetromino Exp $
+
+*gnome-menus-3.10.1-r1 (07 Jun 2014)
+
+  07 Jun 2014; Alexandre Rostovtsev <tetromino@gentoo.org>
+  +gnome-menus-3.10.1-r1.ebuild:
+  Add upstream patches to prevent gnome-shell from crashing when certain
+  .desktop files are updated.
 
   26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -gnome-menus-3.8.1.ebuild:
   drop old
