@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/tc-play
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/tc-play/ChangeLog,v 1.2 2014/03/01 22:35:11 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/tc-play/ChangeLog,v 1.3 2014/06/07 17:07:32 alonbl Exp $
+
+*tc-play-2.0 (07 Jun 2014)
+
+  07 Jun 2014; Alon Bar-Lev <alonbl@gentoo.org> +tc-play-2.0.ebuild:
+  Version bump, bug#511768
 
   01 Mar 2014; Michał Górny <mgorny@gentoo.org> tc-play-1.1.ebuild:
   Update libgcrypt dep to use slot :0.
